# scraping

./: pyproject.toml
scraping/: app.py  constants.py  logger.py
scraping/abase/utils/: datetime_json_encoder.py
scraping/competition/: competition_entity.py
scraping/distancies/: group_info_entity.py
scraping/enums/: gender.py  qualify.py
scraping/event/: event_entity.py
scraping/mos_season_results/: api_competition_result.py  api_results.py  constants.py
scraping/mos_season_results/splits/: split_comparer.py  split_entity.py  split_errors.py
scraping/mos_season_results/uploader/: map_uploader.py  result_uploader.py
scraping/mos_season_results/web_parser/: competition_results.py  control_point_info.py  group_info.py  group_result.py  person_result.py  results_parser.py  utils.py
scraping/mos_season_results/web_transformer/: results_api_transfmormer.py
scraping/parser/: parser_entity.py  parser_output_entity.py  parser_output_enum.py
scraping/person/: person_entity.py
scraping/results/: group_info_entity.py  group_info_parse_utils.py  group_info_parser.py  group_results_entity.py  group_results_parse_utils.py  group_results_parser.py  result_person_entity.py  result_person_searcher.py  results_constants.py  results_parser.py  results_parser_errors.py
scraping/splits/: split_comparer.py  split_entity.py  split_errors.py
scraping/user/: user_entity.py
scraping/workout/: workout_entity.py
